--- a/otrosmontajes.html
+++ b/otrosmontajes.html
@@ -22,18 +22,7 @@
    <div id="contenido">
       <h2>Índice de contenidos</h2>
       <ul>
-         <li><a href="introduccion.html">&emsp;Introducción a Máquinas Simples Tempranas</a></li>
-         <br><br>
-         <li><a href="actividad1.html">&emsp;Actividad 1: Molinillo</a></li>
-         <li><a href="actividad2.html">&emsp;Actividad 2: Lanza Peonzas</a></li>
-         <li><a href="actividad3.html">&emsp;Actividad 3: Balancín</a></li>
-         <li><a href="actividad4.html">&emsp;Actividad 4: Balsa</a></li>
-         <li><a href="actividad5.html">&emsp;Actividad 5: Lanzador de Coches</a></li>
-         <li><a href="actividad6.html">&emsp;Actividad 6: Coche de Medida</a></li>
-         <li><a href="actividad7.html">&emsp;Actividad 7: Jugador de Hockey Sobre Hielo</a></li>
-         <li><a href="actividad8.html">&emsp;Actividad 8: El Perro de Sam</a></li>
-         <br><br>
-         <li><a href="otrosmontajes.html">&emsp;Otros Montajes</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Montaje 1: Guitarra</a></li>
       </ul>
    </div>
    <div id="pie">
@@ -41,3 +30,11 @@
    </div>
 </body>
 </html>
+
+
+
+      <p class="img_centrada">
+        
+            <img src="img/actividad1/1-2.png" width="50%" alt="">
+         </a>
+      </p>
