--- a/otrosmontajes.html
+++ b/otrosmontajes.html
@@ -23,6 +23,7 @@
       <h2>Índice de contenidos</h2>
       <ul>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Montaje 1: Guitarra</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Montaje 2: Ábaco</a></li>
       </ul>
    </div>
    <div id="pie">
@@ -30,11 +31,3 @@
    </div>
 </body>
 </html>
-
-
-
-      <p class="img_centrada">
-        
-            <img src="img/actividad1/1-2.png" width="50%" alt="">
-         </a>
-      </p>
