--- a/otrosmontajes.html
+++ b/otrosmontajes.html
@@ -24,6 +24,7 @@
       <ul>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Montaje 1: Guitarra</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Montaje 2: Ábaco</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Montaje 3: Avión</a></li>
       </ul>
    </div>
    <div id="pie">
