--- a/otrosmontajes.html
+++ b/otrosmontajes.html
@@ -26,6 +26,8 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Montaje 2: Ábaco</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Montaje 3: Avión</a></li>
       </ul>
+      <br><br>
+      <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
