--- a/actividad1.html
+++ b/actividad1.html
@@ -38,7 +38,7 @@
          hace!
       <h2>Construir</h2>
       <p class="texto">
-         Construye el molinillo utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+         Construye el molinillo utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
       </p>
       <p class="img_centrada">
          <a title="Molinillo" href="https://funtechacademy.github.io/lego-tempranas/pdf/molinillo.pdf" target="_blank">
