--- a/actividad2.html
+++ b/actividad2.html
@@ -39,7 +39,7 @@
       </p>
       <h2>Construir</h2>
       <p class="texto">
-         Construye el lanzador y la peonza utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+         Construye el lanzador y la peonza utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
       </p>
       <p class="img_centrada">
          <a title="Lanza Peonzas" href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzapeonzas.pdf" target="_blank">
