--- a/actividad3.html
+++ b/actividad3.html
@@ -35,7 +35,7 @@
       </p>
       <h2>Construir</h2>
       <p class="texto">
-         Construye el balancín utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+         Construye el balancín utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
       </p>
       <p class="img_centrada">
          <a title="Balancín" href="https://funtechacademy.github.io/lego-tempranas/pdf/balancin.pdf" target="_blank">
