--- a/actividad4.html
+++ b/actividad4.html
@@ -37,7 +37,7 @@
       </p>
       <h2>Construir</h2>
       <p class="texto">
-         Construye la balsa utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+         Construye la balsa utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
       </p>
       <p class="img_centrada">
          <a title="Balsa" href="https://funtechacademy.github.io/lego-tempranas/pdf/balsa.pdf" target="_blank">
