--- a/actividad5.html
+++ b/actividad5.html
@@ -38,7 +38,7 @@
       </p>
       <h2>Construir</h2>
       <p class="texto">
-          Construye el coche y el lanzador utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+          Construye el coche y el lanzador utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
       </p>
       <p class="img_centrada">
          <a title="Lanzador de Coches" href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzacoches.pdf" target="_blank">
