--- a/actividad8.html
+++ b/actividad8.html
@@ -36,7 +36,7 @@
       </p>
       <h2>Construir</h2>
       <p class="texto">
-         Construye el perro nuevo de Sam utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+         Construye el perro nuevo de Sam utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
       </p>
       <p class="img_centrada">
          <a title="Perro de Sam" href="https://funtechacademy.github.io/lego-tempranas/pdf/perro.pdf" target="_blank">
