--- a/actividad6.html
+++ b/actividad6.html
@@ -36,7 +36,7 @@
       </p>
       <h2>Construir</h2>
       <p class="texto">
-         Construye el coche de medida utilizando las instrucciones. Picha sobre la imajen para acceder a ellas.
+         Construye el coche de medida utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
       </p>
       <p class="img_centrada">
          <a title="Coche de Medida" href="https://funtechacademy.github.io/lego-tempranas/pdf/cochemedida.pdf" target="_blank">
