--- a/actividad7.html
+++ b/actividad7.html
@@ -37,7 +37,7 @@
       </p>
       <h2>Construir</h2>
       <p class="texto">
-         Construye el jugador de hockey sobre hielo utilizando las instrucciones. Picha sobre la imajen para acceder
+         Construye el jugador de hockey sobre hielo utilizando las instrucciones. Pincha sobre la imagen para acceder a ellas.
          a ellas.
       </p>
       <p class="img_centrada">
