--- a/introduccion.html
+++ b/introduccion.html
@@ -106,6 +106,12 @@
          <br><br>
          Conservaremos la fotografía como material inspirador para futuros solucionadores del problema.
       </p>
+      <h3>Otros Montajes</h3>
+      <p class="texto">
+         Después de los 8 primeros montajes guiados, se abre un gran abanico de nuevas construcciones en las que el 
+         profesor dará rienda suelta a su creatividad para montar una historia alrededor de cada uno de los montajes 
+         con la estructura que hemos visto anteriormente.
+      </p>
       <br><br>
       <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
