--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <div id="cabecera">
-      <h1>Máquinas Tempranas</h1>
+      <h1>Máquinas Simples</h1>
    </div>
    <!-- INICIO_LOADER -->
    <div id="pageloader">
