--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <div id="cabecera">
-      <h1>Máquinas Tempranas</h1>
+      <h1>Máquinas Simples</h1>
    </div>
    <!-- INICIO_LOADER -->
    <div id="pageloader">
@@ -22,12 +22,19 @@
    <div id="contenido">
       <h2>Índice de contenidos</h2>
       <ul>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molinillo.pdf" target="_blank" >&emsp;Actividad 1: Molinillo</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzapeonzas.pdf" target="_blank" >&emsp;Actividad 2: Lanza Peonzas</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/balancin.pdf" target="_blank" >&emsp;Actividad 3: Balancín</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/balsa.pdf" target="_blank" >&emsp;Actividad 4: Balsa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzacoches.pdf" target="_blank" >&emsp;Actividad 5: Lanzador de Coches</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cochemedida.pdf" target="_blank" >&emsp;Actividad 6: Coche de Medida</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hockey.pdf" target="_blank" >&emsp;Actividad 7: Jugador de Hockey Sobre Hielo</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/perro.pdf" target="_blank" >&emsp;Actividad 8: El Perro de Sam</a></li>
+         <br><br>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Actividad 9: Guitarra</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Actividad 10: Ábaco</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Actividad 11: Avión</a></li>
       </ul>
-      <br><br>
-      <a class="texto volver" href="index.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
