--- a/actividad4.html
+++ b/actividad4.html
@@ -129,7 +129,7 @@
       </p>
       <p class="img_centrada"><img src="img/actividad4/4-17.png" width="40%" alt=""></p>
       <br><br>
-      <a class="texto volver" href="index.html">Volver al índice</a>
+      <a class="texto volver" href="indexprofes.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
