--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -20,7 +20,7 @@
    </div>
    <!-- FIN_LOADER -->
    <div id="contenido">
-      <h2>Índice de contenidos</h2>
+      <h2>Índice De Contenidos</h2>
       <ul>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molinillo.pdf" target="_blank" >&emsp;Actividad 1: Molinillo</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/lanzapeonzas.pdf" target="_blank" >&emsp;Actividad 2: Lanza Peonzas</a></li>
