--- a/indexprofes.html
+++ b/indexprofes.html
@@ -20,7 +20,7 @@
    </div>
    <!-- FIN_LOADER -->
    <div id="contenido">
-      <h2>Índice de contenidos</h2>
+      <h2>Índice De Contenidos</h2>
       <ul>
          <li><a href="introduccion.html">&emsp;Introducción a Máquinas Simples Tempranas</a></li>
          <br><br>
