--- a/otrosmontajes.html
+++ b/otrosmontajes.html
@@ -20,14 +20,14 @@
    </div>
    <!-- FIN_LOADER -->
    <div id="contenido">
-      <h2>Índice de contenidos</h2>
+      <h2>Índice De Contenidos</h2>
       <ul>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Actividad 9: Guitarra</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Actividad 10: Ábaco</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Actividad 11: Avión</a></li>
       </ul>
       <br><br>
-      <a class="texto volver" href="index.html">Volver al índice</a>
+      <a class="texto volver" href="indexprofes.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
