--- a/actividad1.html
+++ b/actividad1.html
@@ -98,7 +98,7 @@
       </p>
       <p class="img_centrada"><img src="img/actividad1/1-4.png" width="35%" alt=""></p>
       <br><br>
-      <a class="texto volver" href="index.html">Volver al índice</a>
+      <a class="texto volver" href="indexprofes.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
