--- a/actividad5.html
+++ b/actividad5.html
@@ -105,7 +105,7 @@
       </p>
       <p class="img_centrada"><img src="img/actividad5/5-4.png" width="70%" alt=""></p>
       <br><br>
-      <a class="texto volver" href="index.html">Volver al índice</a>
+      <a class="texto volver" href="indexprofes.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
