--- a/actividad8.html
+++ b/actividad8.html
@@ -100,7 +100,7 @@
       </p>
       <p class="img_centrada"><img src="img/actividad8/8-6.png" width="50%" alt=""></p>
       <br><br>
-      <a class="texto volver" href="index.html">Volver al índice</a>
+      <a class="texto volver" href="indexprofes.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
