--- a/introduccion.html
+++ b/introduccion.html
@@ -113,7 +113,7 @@
          con la estructura que hemos visto anteriormente.
       </p>
       <br><br>
-      <a class="texto volver" href="index.html">Volver al índice</a>
+      <a class="texto volver" href="indexprofes.html">Volver al índice</a>
    </div>
    <div id="pie">
       <h1> Fun Tech Academy - Calle Alcobendas, 23 Leganés 28914 Madrid - www.funtech.academy </h1>
