--- a/otrosmontajes.html
+++ b/otrosmontajes.html
@@ -25,6 +25,9 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Actividad 9: Guitarra</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Actividad 10: Ábaco</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Actividad 11: Avión</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/bomberos.pdf" target="_blank" >&emsp;Actividad 12: Coche De Bomberos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pescar.pdf" target="_blank" >&emsp;Actividad 13: Caña De Pescar</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cortacesped.pdf" target="_blank" >&emsp;Actividad 14: Cortadora De Césped</a></li>
       </ul>
       <br><br>
       <a class="texto volver" href="indexprofes.html">Volver al índice</a>
