--- a/indexprofes.html
+++ b/indexprofes.html
@@ -33,7 +33,7 @@
          <li><a href="actividad7.html">&emsp;Actividad 7: Jugador de Hockey Sobre Hielo</a></li>
          <li><a href="actividad8.html">&emsp;Actividad 8: El Perro de Sam</a></li>
          <br><br>
-         <li><a href="otrosmontajes.html">&emsp;Otros Montajes</a></li>
+         <li><a href="indexotrosmontajes.html">&emsp;Otros Montajes</a></li>
       </ul>
    </div>
    <div id="pie">
