--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -34,6 +34,12 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/guitarra.pdf" target="_blank" >&emsp;Actividad 9: Guitarra</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/abaco.pdf" target="_blank" >&emsp;Actividad 10: Ábaco</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/avion.pdf" target="_blank" >&emsp;Actividad 11: Avión</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/bomberos.pdf" target="_blank" >&emsp;Actividad 12: Coche De Bomberos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pescar.pdf" target="_blank" >&emsp;Actividad 13: Caña De Pescar</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cortacesped.pdf" target="_blank" >&emsp;Actividad 14: Cortadora De Césped</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/camiondireccion.pdf" target="_blank" >&emsp;Actividad 15: Camión Con Dirección</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/torno.pdf" target="_blank" >&emsp;Actividad 16: Torno</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/marioneta.pdf" target="_blank" >&emsp;Actividad 17: Marioneta</a></li>
       </ul>
    </div>
    <div id="pie">
