--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -31,8 +31,12 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/camiondireccion.pdf" target="_blank" >&emsp;Actividad 15: Camión Con Dirección</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/torno.pdf" target="_blank" >&emsp;Actividad 16: Torno</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/marioneta.pdf" target="_blank" >&emsp;Actividad 17: Marioneta</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tazagiratoria.pdf" target="_blank" >&emsp;Actividad 18: Taza Giratoria</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cine.pdf" target="_blank" >&emsp;Actividad 19: Cine</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cochedireccion.pdf" target="_blank" >&emsp;Actividad 20: Coche Direccion</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cintatransportadora.pdf" target="_blank" >&emsp;Actividad 21: Cinta Transportadora</a></li>
 <!--
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 1: </a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 2: </a></li>
 -->
 
       </ul>
