--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -35,6 +35,9 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cine.pdf" target="_blank" >&emsp;Actividad 19: Cine</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cochedireccion.pdf" target="_blank" >&emsp;Actividad 20: Coche Direccion</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cintatransportadora.pdf" target="_blank" >&emsp;Actividad 21: Cinta Transportadora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/grua.pdf" target="_blank" >&emsp;Actividad 22: Grúa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/escavadora.pdf" target="_blank" >&emsp;Actividad 23: Escavadora</a></li>
+
 <!--
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 2: </a></li>
 -->
