--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -38,6 +38,8 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/grua.pdf" target="_blank" >&emsp;Actividad 22: Grúa</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/escavadora.pdf" target="_blank" >&emsp;Actividad 23: Escavadora</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molino.pdf" target="_blank" >&emsp;Actividad 24: Molino</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/moto.pdf" target="_blank" >&emsp;Actividad 25: Moto</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pluma.pdf" target="_blank" >&emsp;Actividad 26: Pluma</a></li>
 
 <!--
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 2: </a></li>
