--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -40,6 +40,8 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molino.pdf" target="_blank" >&emsp;Actividad 24: Molino</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/moto.pdf" target="_blank" >&emsp;Actividad 25: Moto</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pluma.pdf" target="_blank" >&emsp;Actividad 26: Pluma</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillas.pdf" target="_blank" >&emsp;Actividad 27: Sillas Voladoras</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pesquero.pdf" target="_blank" >&emsp;Actividad 28: Barco Pesquero</a></li>
 
 <!--
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 2: </a></li>
