--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -42,9 +42,11 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pluma.pdf" target="_blank" >&emsp;Actividad 26: Pluma</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillas.pdf" target="_blank" >&emsp;Actividad 27: Sillas Voladoras</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pesquero.pdf" target="_blank" >&emsp;Actividad 28: Barco Pesquero</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/emoticono.pdf" target="_blank" >&emsp;Actividad 29: Emoticonos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tractor.pdf" target="_blank" >&emsp;Actividad 30: Tractor</a></li>
 
 <!--
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 2: </a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 3: </a></li>
 -->
 
       </ul>
