--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -44,6 +44,7 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pesquero.pdf" target="_blank" >&emsp;Actividad 28: Barco Pesquero</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/emoticono.pdf" target="_blank" >&emsp;Actividad 29: Emoticonos</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tractor.pdf" target="_blank" >&emsp;Actividad 30: Tractor</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hormigonera.pdf" target="_blank" >&emsp;Actividad 31: Hormigonera</a></li>
 
 <!--
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 3: </a></li>
