--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -45,6 +45,7 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/emoticono.pdf" target="_blank" >&emsp;Actividad 29: Emoticonos</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tractor.pdf" target="_blank" >&emsp;Actividad 30: Tractor</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hormigonera.pdf" target="_blank" >&emsp;Actividad 31: Hormigonera</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/plantacarnivora.pdf" target="_blank" >&emsp;Actividad 32: Planta Carnívora</a></li>
 
 <!--
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 3: </a></li>
