--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -46,6 +46,9 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tractor.pdf" target="_blank" >&emsp;Actividad 30: Tractor</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hormigonera.pdf" target="_blank" >&emsp;Actividad 31: Hormigonera</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/plantacarnivora.pdf" target="_blank" >&emsp;Actividad 32: Planta Carnívora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/garaje.pdf" target="_blank" >&emsp;Actividad 33: Puerta Garaje</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/presa.pdf" target="_blank" >&emsp;Actividad 34: Presa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pulidora.pdf" target="_blank" >&emsp;Actividad 35: Pulidora</a></li>
 
 <!--
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 3: </a></li>
