--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -46,6 +46,18 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/cintatransportadora.pdf" target="_blank" >&emsp;Actividad 21: Cinta Transportadora</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/grua.pdf" target="_blank" >&emsp;Actividad 22: Grúa</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/escavadora.pdf" target="_blank" >&emsp;Actividad 23: Escavadora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molino.pdf" target="_blank" >&emsp;Actividad 24: Molino</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/moto.pdf" target="_blank" >&emsp;Actividad 25: Moto</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pluma.pdf" target="_blank" >&emsp;Actividad 26: Pluma</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillas.pdf" target="_blank" >&emsp;Actividad 27: Sillas Voladoras</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pesquero.pdf" target="_blank" >&emsp;Actividad 28: Barco Pesquero</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/emoticono.pdf" target="_blank" >&emsp;Actividad 29: Emoticonos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tractor.pdf" target="_blank" >&emsp;Actividad 30: Tractor</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/hormigonera.pdf" target="_blank" >&emsp;Actividad 31: Hormigonera</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/plantacarnivora.pdf" target="_blank" >&emsp;Actividad 32: Planta Carnívora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/garaje.pdf" target="_blank" >&emsp;Actividad 33: Puerta Garaje</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/presa.pdf" target="_blank" >&emsp;Actividad 34: Presa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pulidora.pdf" target="_blank" >&emsp;Actividad 35: Pulidora</a></li>
       </ul>
    </div>
    <div id="pie">
