--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -49,6 +49,9 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/garaje.pdf" target="_blank" >&emsp;Actividad 33: Puerta Garaje</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/presa.pdf" target="_blank" >&emsp;Actividad 34: Presa</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pulidora.pdf" target="_blank" >&emsp;Actividad 35: Pulidora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carabella.pdf" target="_blank" >&emsp;Actividad 36: Carabela</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/ascensor.pdf" target="_blank" >&emsp;Actividad 37: Ascensor</a></li>
+
 
 <!--
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 3: </a></li>
