--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -51,6 +51,16 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pulidora.pdf" target="_blank" >&emsp;Actividad 35: Pulidora</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carabella.pdf" target="_blank" >&emsp;Actividad 36: Carabela</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/ascensor.pdf" target="_blank" >&emsp;Actividad 37: Ascensor</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/telar.pdf" target="_blank" >&emsp;Actividad 38: Telar</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/mariposa.pdf" target="_blank" >&emsp;Actividad 39: Mariposa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/jirafa.pdf" target="_blank" >&emsp;Actividad 40: Jirafa</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/gusano.pdf" target="_blank" >&emsp;Actividad 41: Gusano</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/molinoagua.pdf" target="_blank" >&emsp;Actividad 42: Molino de Agua</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/teleferico.pdf" target="_blank" >&emsp;Actividad 43: Teleférico</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/empaquetadora.pdf" target="_blank" >&emsp;Actividad 44: Empaquetadora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tenaza.pdf" target="_blank" >&emsp;Actividad 45: Tenaza</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tren.pdf" target="_blank" >&emsp;Actividad 46: Tren</a></li>
+
 
 
 <!--
