--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -69,6 +69,9 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/empaquetadora.pdf" target="_blank" >&emsp;Actividad 44: Empaquetadora</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tenaza.pdf" target="_blank" >&emsp;Actividad 45: Tenaza</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tren.pdf" target="_blank" >&emsp;Actividad 46: Tren</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/troqueladora.pdf" target="_blank" >&emsp;Actividad 47: Troqueladora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sembradora.pdf" target="_blank" >&emsp;Actividad 48: Sembradora</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/estructura.pdf" target="_blank" >&emsp;Actividad 49: Estructura</a></li>
       </ul>
    </div>
    <div id="pie">
