--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -72,6 +72,10 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/troqueladora.pdf" target="_blank" >&emsp;Actividad 47: Troqueladora</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sembradora.pdf" target="_blank" >&emsp;Actividad 48: Sembradora</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/estructura.pdf" target="_blank" >&emsp;Actividad 49: Estructura</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/mellizos.pdf" target="_blank" >&emsp;Actividad 50: Mellizos</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pico.pdf" target="_blank" >&emsp;Actividad 51: Pico</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillaruedas.pdf" target="_blank" >&emsp;Actividad 52: Silla de Ruedas</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carretilla.pdf" target="_blank" >&emsp;Actividad 53: Carretilla</a></li>
       </ul>
    </div>
    <div id="pie">
