--- a/indexalumnos.html
+++ b/indexalumnos.html
@@ -76,6 +76,7 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pico.pdf" target="_blank" >&emsp;Actividad 51: Pico</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillaruedas.pdf" target="_blank" >&emsp;Actividad 52: Silla de Ruedas</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carretilla.pdf" target="_blank" >&emsp;Actividad 53: Carretilla</a></li>
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tierraluna.pdf" target="_blank" >&emsp;Actividad 54: Tierra y Luna</a></li>
       </ul>
    </div>
    <div id="pie">
