--- a/indexotrosmontajes.html
+++ b/indexotrosmontajes.html
@@ -67,14 +67,7 @@
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/pico.pdf" target="_blank" >&emsp;Actividad 51: Pico</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/sillaruedas.pdf" target="_blank" >&emsp;Actividad 52: Silla de Ruedas</a></li>
          <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/carretilla.pdf" target="_blank" >&emsp;Actividad 53: Carretilla</a></li>
-
-
-
-
-<!--
-         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/.pdf" target="_blank" >&emsp;Actividad 3: </a></li>
--->
-
+         <li><a href="https://funtechacademy.github.io/lego-tempranas/pdf/tierraluna.pdf" target="_blank" >&emsp;Actividad 54: Tierra y Luna</a></li>
       </ul>
       <br><br>
       <a class="texto volver" href="indexprofes.html">Volver al índice</a>
